animated and adapted navigation and logo blocks

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,11 +12,16 @@ body {
     }
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
+
 /* --------HEADER----------- */
 
 .header {
     position: fixed;
     width: 100%;
+    z-index: 1;
 
     &__block {
         // .header__block
@@ -79,45 +84,93 @@ body {
         }
     }
 
-    @include max-screen(540px) {
-        display: none;
+    @include max-screen(605px) {
+        transform: translateX(-100dvw);
+        position: absolute;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100dvw;
+        height: 100dvh;
+        background-color: black;
+        gap: 50px;
+        font-size: 28px;
+        left: 0;
+        top: 0;
+        transition: all .1s;
     }
 }
 
-.burger {
+.items-menu {
+    transform: translateX(0);
+    transition: all .1s;
+}
+
+.burger-close {
     display: none;
-    margin-top: 10px;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
     width: 30px;
 
-    &-item {
-        content: '';
-        height: 2px;
-        width: 100%;
-        background-color: #FFF;
-        margin-top: 10px;
+    &__item-one {
+        // .burger-close__item-one
+        margin: 0 0 5px 0;
+        transform: rotate(0deg);
+        transition: all 0.1s ease-out 0s;
     }
 
-    &:before {
-        content: '';
-        width: 100%;
-        height: 2px;
-        background-color: #FFF;
-        transform: translateY(20px);
+    &__item-three {
+        // .burger-close__item_three
+        margin: 5px 0 0 0;
+        transform: rotate(0deg);
+        transition: all 0.1s ease-out 0s;
     }
 
-    &:after {
-        content: '';
-        width: 100%;
-        height: 2px;
-        background-color: #FFF;
-        transform: translateY(-10px);
+    @include max-screen(605px) {
+        display: flex;
+        z-index: 3;
+    }
+}
+
+.burger-open {
+    display: none;
+    position: relative;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 30px;
+
+    &__item-one {
+        // .burger-open__item-one
+        position: absolute;
+        transform: rotate(45deg);
+        transition: all 0.1s ease-out 0s;
     }
 
-    @include max-screen(540px) {
+    &__item-two {
+        // .burger-open__item_two
+        display: none;
+        //transition: all 1.9s ease-out 0s;
+    }
+
+    &__item-three {
+        // .burger-open__item_three
+        position: absolute;
+        transform: rotate(-45deg);
+        transition: all 0.1s ease-out 0s;
+    }
+
+    @include max-screen(605px) {
         display: flex;
     }
+}
+
+.item {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #FFF;
 }
 
 /* --------MAIN----------- */
@@ -126,25 +179,14 @@ body {
 
     &__block {
         // .main__block
-        padding: 0 20px;
+        //padding: 0 20px;
         border: 1px solid red;
     }
 
     &__content {
         // .main__content
         display: flex;
-        //justify-content: center;
         flex-direction: column;
-    }
-
-    &__stamp {
-        // .main__stamp
-        background: url("../images/glass.svg") no-repeat center;
-        //width: 90dvw;
-        height: 100dvh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
     }
 
     &__info {
@@ -153,14 +195,101 @@ body {
     }
 }
 
+//.stamp {
+//    background: url("../images/glass.svg") no-repeat center;
+//    height: 100dvh;
+//    display: flex;
+//    align-items: center;
+//    justify-content: center;
+//    animation: Appearance .3s;
+//
+//    @-webkit-keyframes Appearance {
+//        0% {opacity: 0;}
+//        100% {opacity: 1;}
+//    }
+//
+//    @-o-keyframes Appearance {
+//        0% {opacity: 0;}
+//        100% {opacity: 1;}
+//    }
+//
+//    @-moz-keyframes Appearance {
+//        0% {opacity: 0;}
+//        100% {opacity: 1;}
+//    }
+//
+//    @keyframes Appearance {
+//        0% {opacity: 0;}
+//        100% {opacity: 1;}
+//    }
+//
+//    &__img {
+//        // .stamp__img
+//        margin: 0 0 70px 0;
+//
+//        img {
+//            width: 90dvw;
+//            height: 340px;
+//        }
+//    }
+//}
+
 .stamp {
+    position: relative;
+    //height: 100dvh;
 
     &__img {
         // .stamp__img
-        margin: 0 0 70px 0;
-        img {
-            width: 90dvw;
-            height: 340px;
+        //margin: 0 0 70px 0;
+        //position: absolute;
+        //top: 70px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.glass-img {
+    width: 100dvw;
+    height: 100dvh;
+    animation: Appearance .3s;
+
+    @-webkit-keyframes Appearance {
+        0% {opacity: 0;}
+        100% {opacity: 1;}
+    }
+
+    @-o-keyframes Appearance {
+        0% {opacity: 0;}
+        100% {opacity: 1;}
+    }
+
+    @-moz-keyframes Appearance {
+        0% {opacity: 0;}
+        100% {opacity: 1;}
+    }
+
+    @keyframes Appearance {
+        0% {opacity: 0;}
+        100% {opacity: 1;}
+    }
+}
+
+.owl-img {
+    position: absolute;
+    top: -20px;
+    width: clamp(20dvw, 54dvw, 300px);
+    height: 100dvh;
+    animation: Owl .2s;
+
+    @keyframes Owl {
+        0% {
+            opacity: 0;
+            transform: rotate(180deg);
+        }
+        100% {
+            opacity: 1;
+            transform: rotate(0);
         }
     }
 }
@@ -171,7 +300,7 @@ body {
 
     &__block {
         // .footer__block
-        padding: 0 20px;
+        //padding: 0 20px;
         border: 1px solid red;
     }
 
